# GMatElastoPlasticQPot3d

./: .ci_environment_docs.yaml  .gitignore  .travis.yml  CMakeLists.txt  ElastoPlasticQPot3d.pc.in  ElastoPlasticQPot3dConfig.cmake.in  GMatElastoPlasticQPot3d.pc.in  GMatElastoPlasticQPot3dConfig.cmake  GMatElastoPlasticQPot3dConfig.cmake.in  README.md  environment.yaml  environment_test.yaml  setup.py
.github/workflows/: ci.yml
develop/: CMakeLists.txt  ElastoPlasticQPot_Cartesian2d.cpp  main.cpp  main.py
docs/theory/: readme.tex
include/ElastoPlasticQPot3d/: Cartesian3d.hpp  Cusp.hpp  Elastic.hpp  ElastoPlasticQPot3d.h  Matrix.hpp  Smooth.hpp  python.cpp
include/GMatElastoPlasticQPot3d/: Cartesian3d.h  Cartesian3d.hpp  Cartesian3d_Array.hpp  Cartesian3d_Cusp.hpp  Cartesian3d_Elastic.hpp  Cartesian3d_Matrix.hpp  Cartesian3d_Smooth.hpp  GMatElastoPlasticQPot3d.h  config.h  python.cpp  version.h  version.hpp
include/xElastoPlasticQPot3d/: Cartesian3d.h  Cartesian3d.hpp  Cartesian3d_Cusp.hpp  Cartesian3d_Elastic.hpp  Cartesian3d_Matrix.hpp  Cartesian3d_Smooth.hpp  Cusp.hpp  Elastic.hpp  ElastoPlasticQPot3d.h  Matrix.hpp  Smooth.hpp  python.cpp
python/: main.cpp
python/GMatElastoPlasticQPot3d/: Cartesian3d.py  __init__.py
src/ElastoPlasticQPot3d/: Cusp.hpp  Elastic.hpp  ElastoPlasticQPot3d.h  Matrix.hpp  Smooth.hpp  equivalent.hpp  python.cpp
test/: CMakeLists.txt  Cartesian3d.cpp  Cartesian3d.py  GMatElastoPlasticQPot_Cartesian2d.cpp  main.py
test/compare_versions/: Cartesian3d_generate.py
tests/: CMakeLists.txt  Cartesian3d.cpp  Cartesian3d.py  GMatElastoPlasticQPot_Cartesian2d.cpp
tests/compare_versions/: Cartesian3d_check_main.py  Cartesian3d_check_v0.5.0.py
